--- a/ani/src/App.scss
+++ b/ani/src/App.scss
@@ -3,46 +3,57 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow-x: hidden;
 
-  .bg_video {
-    position: absolute;
+  .top {
+    position: relative;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-  }
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  .container {
-    width: 380px;
-    height: 200px;
-    margin-left: 2rem;
-    margin-top: 300px;
-    position: absolute;
-  }
-
-  .text {
-    // margin: 1rem;
-    margin-top: 4rem;
-
-    // background-color: #333;
-    text-shadow: 0px 0px 3px rgba($color: #333, $alpha: 0.83);
-    //
-    // margin-left: 4rem;
-    // padding: 2rem;
-    font-weight: 300;
-    font-size: 36px;
-    opacity: 0;
-  }
-  .wrap {
-    margin-left: 5rem;
-    // background-color: #333;
-    .stagger {
-      font-size: 24px;
-      opacity: 0;
-      // color:
-      // margin-left: 4rem;
+    .bg_video {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
+
+    .container {
+      width: 380px;
+      height: 200px;
+      margin-left: 2rem;
+      margin-top: 300px;
+      // background-color: #333;
+      position: absolute;
+    }
+
+    .text {
+      margin-top: 4rem;
+      text-shadow: 0px 0px 3px rgba($color: #333, $alpha: 0.83);
+      font-weight: 300;
+      font-size: 36px;
+      opacity: 0;
+    }
+    .wrap {
+      margin-left: 5rem;
+      .stagger {
+        font-size: 24px;
+        opacity: 0;
+      }
+    }
+  }
+
+  .center{
+    width: 100%;
+    height: 80%;
+    background-color: #fff;
+  }
+  .bottom{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(168, 165, 165,0.12);
+    text-align: center;
   }
 }
