--- a/ani/src/App.scss
+++ b/ani/src/App.scss
@@ -2,13 +2,15 @@
   opacity: 0;
   position: relative;
   width: 100vw;
-  height: 100vh;
-  overflow-x: hidden;
+  // height: 100vh;
+  // overflow-x: hidden;
+  
+  // background-color: #333;
 
   .top {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -45,15 +47,19 @@
     }
   }
 
-  .center{
+  .center {
     width: 100%;
     height: 80%;
     background-color: #fff;
   }
-  .bottom{
+  .bottom {
     width: 100%;
     height: 100%;
-    background-color: rgba(168, 165, 165,0.12);
+    background-color: rgba(168, 165, 165, 0.12);
     text-align: center;
+    
+    .footage {
+      opacity: 1;
+    }
   }
 }
