--- a/ani/src/App.scss
+++ b/ani/src/App.scss
@@ -1,11 +1,6 @@
 .App {
   opacity: 0;
   position: relative;
-  width: 100vw;
-  // height: 100vh;
-  // overflow-x: hidden;
-  
-  // background-color: #333;
 
   .top {
     position: relative;
@@ -50,6 +45,7 @@
   .center {
     width: 100%;
     height: 80%;
+    position: relative;
     background-color: #fff;
   }
   .bottom {
