--- a/ani/src/components/Article/Article.module.scss
+++ b/ani/src/components/Article/Article.module.scss
@@ -1,21 +1,36 @@
+@mixin marginLeft {
+  margin-left: 2rem;
+}
+
 .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding:5rem;
+  position: relative;
+  height: 100%;
+  width: 100%;
 
   aside{
+    // background-color: #333;
+    height: 200px;
     .Title{
-      opacity: 0;
+      opacity: 1;
+      margin-bottom: 1rem;
+      font-size: 32px;
+    }
+    p{
+      opacity: 1;
     }
   }
   .img_wrapper {
     .img {
+      box-shadow: 0px 0px 8px rgba($color: #000000, $alpha: 0.5);
       opacity: 1;
       border-radius: 3px;
       width: 690px;
       height: 480px;
-      margin-right: 2rem;
+      // margin-right: 2rem;
     }
   }
 }
