--- a/hamburger-menu/src/App.scss
+++ b/hamburger-menu/src/App.scss
@@ -100,6 +100,27 @@ header {
         height: 100%;
         width: 100%;
         opacity: 0;
+        background-size: cover;
+        background-repeat: no-repeat;
+        animation: cameraPan 30s infinite;
+
+        @keyframes cameraPan {
+          0% {
+            background-position: 0% 0%;
+          }
+          25% {
+            background-position: 40% 10%;
+          }
+          50% {
+            background-position: 0% 40%;
+          }
+          75% {
+            background-position: 10% 40%;
+          }
+          100% {
+            background-position: 0% 0%;
+          }
+        }
       }
       .wrapper {
         position: relative;
