--- a/hamburger-menu/src/pages/Contact/Contact.scss
+++ b/hamburger-menu/src/pages/Contact/Contact.scss
@@ -1,11 +1,7 @@
 .contact_container {
   width: 100%;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   background-color: #fff;
-  height: 500px;
+  height: calc(100vh - 180px);
   padding: 10px;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-  scrollbar-width: none;
 }
