--- a/hamburger-menu/src/pages/our-products/OurProducts.scss
+++ b/hamburger-menu/src/pages/our-products/OurProducts.scss
@@ -1,6 +1,5 @@
 @import "../../global.scss";
 
-
 .product_container {
   font-size: 0.75rem;
   letter-spacing: 0.3rem;
@@ -17,11 +16,55 @@
     flex-wrap: wrap;
 
     .card {
+      position: relative;
       margin: 1rem;
       cursor: pointer;
+      width: 300px;
+      height: 320px;
+      overflow: hidden;
+
+      .background-overlay {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        color: white;
+
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        background-color: rgba($color: #000, $alpha: 0.2);
+        right: 0;
+        transition: all 0.5s;
+
+        .heart {
+          font-size: 2rem;
+          color: white;
+          transition: all 0.3s;
+          &:hover {
+            color: red;
+          }
+        }
+        .link {
+          color: white;
+          font-size: 2.5rem;
+          transition: all 0.3s;
+          &:hover {
+            color: $grass;
+          }
+        }
+
+        &:hover {
+          opacity: 1;
+          backdrop-filter: blur(2px);
+        }
+      }
+
       img {
-        width: 300px;
-        height: 320px;
+        position: block;
+        width: 100%;
+        height: 100%;
         border-radius: 1px;
       }
     }
