--- a/blogs/client/src/components/sidebar/Sidebar.scss
+++ b/blogs/client/src/components/sidebar/Sidebar.scss
@@ -1,3 +1,72 @@
-.sidebar{
-	flex:3;
+.sidebar {
+  flex: 3;
+  margin: 20px;
+  padding-bottom: 30px;
+  background: #fdfbfb;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .sidebarItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .sidebarTitle {
+      margin: 10px;
+      padding: 5px;
+      width: 80%;
+      border-top: 1px solid #a7a4a4;
+      border-bottom: 1px solid #a7a4a4;
+      font-size: 12px;
+      color: #222;
+      line-height: 20px;
+      text-align: center;
+      // font-weight: 400;
+    }
+
+    & > img {
+      margin-top: 15px;
+	  object-fit: cover;
+	  width: 250px;
+	  height: 250px;
+    }
+
+    & > p {
+      padding: 30px;
+	  margin-left: 15px;
+    }
+
+    .sidebarList {
+      list-style-type: none;
+      margin-bottom: 30px;
+	  display: flex;
+	  align-items: center;
+	  justify-content: center;
+	  width: 100%;
+	  flex-wrap: wrap;
+	  text-align: center;
+
+      .sidebarListItem {
+        width: 50%;
+        margin-top: 15px;
+        cursor: pointer;
+      }
+    }
+
+    .sidebarSocial {
+      margin-top: 15px;
+      width: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .sidebarIcon {
+        font-size: 16px;
+        margin-left: 10px;
+        cursor: pointer;
+      }
+    }
+  }
 }
