--- a/blogs/client/src/components/singlePost/SinglePost.scss
+++ b/blogs/client/src/components/singlePost/SinglePost.scss
@@ -1,3 +1,62 @@
-.singlePost{
-	flex:9;
+.singlePost {
+  flex: 9;
+  .singlePostWrapper {
+    padding: 20px;
+    padding-right: 0;
+    .singlePostImg {
+      width: 100%;
+      height: 300px;
+      object-fit: contain;
+      border-radius: 2px;
+    }
+  }
+  .singlePostTitle {
+    text-align: center;
+    margin: 10px;
+    font-size: 28px;
+    font-family: "Cormorant Garamond", serif;
+
+    .singlePostEdit {
+      float: right;
+      font-size: 16px;
+      .singlePostIcon {
+        margin-left: 10px;
+        cursor: pointer;
+
+        &:first-child {
+          color: teal;
+        }
+        &:last-child {
+          color: tomato;
+        }
+      }
+    }
+  }
+  .singlePostInfo {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    color: grey;
+
+    .singlePostAuthor {
+      b {
+      }
+    }
+    .singlePostDate {
+    }
+  }
+  .singlePostDesc {
+	font-size: 18px;
+	line-height: 25px;
+    font-family: "Poppins", serif;
+	font-weight: normal;
+	letter-spacing: 1px;
+	&::first-letter{
+		text-transform: capitalize;
+		margin-left: 20px;
+		font-size: 30px;
+		font-weight: 600;
+	}
+  }
 }
