--- a/blogs/client/src/index.css
+++ b/blogs/client/src/index.css
@@ -7,8 +7,18 @@ body {
   padding: 0px;
   box-sizing: border-box;
   /* font-family: "Cormorant Garamond", serif; */
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
 }
+
 /* font-family: 'Cormorant Garamond', serif;
 font-family: 'Poppins', sans-serif;
 font-family: 'Trirong', serif; */
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(179, 179, 179);
+}
