--- a/blogs/client/src/pages/login/Login.scss
+++ b/blogs/client/src/pages/login/Login.scss
@@ -36,6 +36,11 @@
       border-radius: 3px;
       border: none;
       padding: 10px;
+
+      &:disabled{
+        cursor: not-allowed;
+        background-color: lighten($color: lightcoral, $amount: 10);
+      }
     }
   }
   .loginRegisterBtn {
