--- a/e-commerce/styles/Featured.module.scss
+++ b/e-commerce/styles/Featured.module.scss
@@ -3,6 +3,8 @@
 .container {
   height: calc(100vh - 100px);
   background-color: $main-color;
+  position: relative;
+  z-index: 10;
   overflow-x: hidden;
 
   .arrowContainer {
@@ -13,13 +15,13 @@
     bottom: 0;
     margin: auto;
     cursor: pointer;
-	z-index: 2;
+    z-index: 2;
   }
   .wrapper {
     width: 300vw;
-	height: 100%;
-	display: flex;
-	transition: all 1.5s ease-in-out;
+    height: 100%;
+    display: flex;
+    transition: all 1.5s ease-in-out;
 
     .imgContainer {
       width: 100vw;
