--- a/e-commerce/styles/Navbar.module.scss
+++ b/e-commerce/styles/Navbar.module.scss
@@ -8,6 +8,7 @@ $main-color: #d1411e;
   align-items: center;
   justify-content: space-between;
   position: sticky;
+  z-index: 999;
   top: 0;
 
   .item {
@@ -50,28 +51,30 @@ $main-color: #d1411e;
       }
     }
     .cart {
-		position: relative;
+      position: relative;
       .counter {
-		  position: absolute;
-		  top: -10px;
-		  right: -10px;
-		  width: 20px;
-		  height: 20px;
-		  background-color: white;
-		  display: flex;
-		  align-items: center;
-		  justify-content: center;
-		  font-weight: bold;
-		  padding: 3px;
-		  border-radius: 50%;
-		  color:$main-color;
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        width: 20px;
+        height: 20px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        padding: 3px;
+        border-radius: 50%;
+        color: $main-color;
       }
     }
-  }
-  .item:nth-child(2) {
-    flex: 3;
-  }
-  .item:last-child {
-    justify-content: flex-end;
+    &:nth-child(2) {
+      flex: 3;
+      // background-color: #fff;
+      justify-content: center;
+    }
+    &:last-child {
+      justify-content: flex-end;
+    }
   }
 }
