--- a/e-commerce/styles/PizzaList.module.scss
+++ b/e-commerce/styles/PizzaList.module.scss
@@ -17,3 +17,15 @@
 	flex-wrap: wrap;
   }
 }
+
+@media  screen and (max-width:480px) {
+  .title{
+    text-align: center;
+
+  }
+  .desc{
+    width: 90%;
+    text-align: center;
+  }
+  
+}
