--- a/e-commerce/styles/Cart.module.scss
+++ b/e-commerce/styles/Cart.module.scss
@@ -68,3 +68,61 @@
     }
   }
 }
+
+@media screen and (max-width: 480px) {
+  .container {
+    flex-direction: column;
+    padding: 20px;
+    .right {
+      .wrapper{
+        width: 100%;
+      }
+    }
+    .left {
+      .table {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .tr {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          margin-bottom: 20px;
+
+          td {
+            .extras,
+            .price,
+            .quantity {
+              font-size: 22px;
+            }
+            .price::before{
+              content: 'Price: ';
+              font-weight: 500;
+            }
+            .quantity::before{
+              content: 'Quantity: ';
+              font-weight: 500;
+            }
+            .total::before{
+              content: 'Total: ';
+              font-weight: 500;
+            }
+            .imgContainer {
+              width: 35vw;
+              height: 35vw;
+            }
+            .name,
+            .total {
+              font-size: 24px;
+            }
+          }
+        }
+        .trTitle {
+          display: none;
+        }
+      }
+    }
+  }
+}
