--- a/e-commerce/styles/Order.module.scss
+++ b/e-commerce/styles/Order.module.scss
@@ -41,7 +41,7 @@
         flex-direction: column;
         align-items: center;
         animation: inProgress 1s ease infinite alternate;
-        
+
         .checkedIcon {
           display: none;
         }
@@ -60,7 +60,7 @@
         flex-direction: column;
         align-items: center;
         opacity: 0.3;
-        
+
         .checkedIcon {
           display: none;
         }
@@ -92,6 +92,64 @@
         font-weight: bold;
         margin-top: 20px;
         cursor: not-allowed;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    flex-direction: column;
+    .left {
+      .row {
+        .table {
+          .trTitle {
+            display: none;
+          }
+          .tr {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+
+            td {
+              .id::before {
+                content: "Order ID: ";
+                font-weight: 500;
+              }
+              .name::before {
+                content: "Customer: ";
+                font-weight: 500;
+              }
+              .address::before {
+                content: "Address: ";
+                font-weight: 500;
+              }
+              .total::before {
+                content: "Total: ";
+                font-weight: 500;
+              }
+            }
+          }
+        }
+        &:last-child {
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+        }
+
+        .done,
+        .undone,
+        .inProgress {
+          margin-bottom: 20px;
+        }
+      }
+    }
+    .right{
+      .wrapper{
+        width: 100%;
       }
     }
   }
